Fixes #3331, applied pebosi's patch after confirming: use higher z-index w/ site selector.
git-svn-id: http://dev.piwik.org/svn/trunk@7292 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/themes/default/common.css
+++ b/themes/default/common.css
@@ -233,6 +233,7 @@ a {
 	position:absolute; 
 	top:65px; 
 	right:0;
+	z-index:20;
 }
 .top_bar_sites_selector>label{
 	display:inline-block; 
